tests/parsing/smtlib/mcil/errors/222_define-system_bad_local_list.mcil
(define-system sys :local (Int))