tests/parsing/smtlib/mcil/errors/222_define-system_bad_local_list.expected
File "tests/parsing/smtlib/mcil/errors/222_define-system_bad_local_list.mcil", line 1, character 27-30:
1 | (define-system sys :local (Int))
                               ^^^
Error while parsing a system local variable declaration,
      read the symbol 'Int',
      but expected a sorted variable of the form "(var sort)", or a closing
      parenthesis.
